--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,264 @@
   color: rgb(0 0 0 / 60%);
 }
 
+/* Nav Bar section */
+
+.navbar-main-section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
+
+.search-box-text {
+  margin-left: 5px;
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  padding: 10px;
+}
+
+.header-part {
+  display: flex;
+  justify-content: space-between;
+  width: 1128px;
+  align-items: center;
+}
+
+.header-left-section {
+  display: flex;
+  flex-basis: 40%;
+}
+
+.header-left-section:hover {
+  width: 100%;
+}
+
+.header-left-section img {
+  object-fit: contain;
+  height: 40px;
+  margin-right: 8px;
+}
+
+.header-search-input {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  border-radius: 5px;
+  width: 60%;
+  color: gray;
+  background-color: #eef3f8;
+}
+
+.header-search-input:hover {
+  width: 80%;
+  transition: 0.5s all;
+}
+
+.header-search-input > input {
+  outline: none;
+  border: none;
+  background: none;
+  width: 100%;
+}
+
+.header-right-section {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: gray;
+  cursor: pointer;
+}
+
+.header-right-section i {
+  font-size: 20px;
+}
+
+.effects {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.effects:hover {
+  color: black;
+  text-decoration: underline;
+  text-underline-position: under;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 10px;
+}
+
+.a-header-decoration {
+  text-decoration: none;
+  color: unset;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.a-header-decoration p {
+  margin: 0;
+}
+
+/* dropwodn Menu */
+
+.text:hover {
+  cursor: pointer;
+  color: black;
+  text-decoration: underline;
+  text-underline-position: under;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 10px;
+}
+
+.text{
+  margin-top: -5px;
+}
+
+.profile-down img {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+}
+
+.profile-down {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  background-color: unset;
+}
+
+.profile-down {
+  background-color: unset;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.my-profile-dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: white;
+  overflow: auto;
+  border-radius: 10px;
+  z-index: 100;
+  border: 0.2px solid rgb(0 0 0 / 20%);
+  position: absolute;
+  top: 60px;
+  right: 29%;
+}
+
+.dropdown a {
+  text-decoration: none;
+  color: unset;
+}
+
+.dropdown a:hover {
+  text-decoration: underline;
+  color: gray;
+}
+
+.show {
+  display: block;
+  width: max-content;
+}
+
+.hello {
+  text-align: start;
+  text-decoration: none;
+}
+
+.margin-zero {
+  margin: 0;
+}
+
+.display-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.display-flex a {
+  padding-top: 10px;
+}
+
+.margin-bottom {
+  margin: 0;
+}
+
+.view-details {
+  padding: 10px;
+}
+
+.user-data {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.user-data-profile-pic img {
+  width: 64px;
+  height: 64px;
+  border: 2px solid #fff;
+  background-position: center;
+  border-radius: 50%;
+}
+
+.profile-drop-info {
+  margin-left: 5px;
+}
+
+.view-profile-class-button {
+  margin-top: 14px;
+  width: 100%;
+  color: #3983ce;
+  background-color: white;
+  outline: 1px solid #3983ce;
+  border-radius: 20px;
+  padding: 3px 0;
+  border: none;
+}
+
+.view-profile-class-button:hover{
+  outline: 2px solid #3983ce;
+}
+
+.profile-details-account-section {
+  text-align: start;
+}
+
+.profile-details-account-section {
+  margin-top: 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 12px;
+}
+
+/*  */
+
+.premium {
+  width: 100px;
+}
+
+.premium a {
+  color: #a87e3e;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.premium a:hover {
+  color: #915907;
+  text-decoration: underline;
+}
+
+/* Header */
+
 .artdeco-button-text {
   color: rgb(0 0 0 / 60%);
   margin-left: 8px;
@@ -61,10 +319,28 @@
   margin: 0 auto;
 }
 
+.addvertise-section {
+  margin: 56px auto 0;
+  padding: 25px;
+  text-align: center;
+}
+
+.addvertise-section span {
+  color: #0a66c2;
+}
+
+.addvertise-section p:hover {
+  text-decoration: underline;
+}
+
+.addvertise-section p {
+  font-size: 15px;
+  color: #434649;
+}
+
 .body-section {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 40px;
 }
 
 .side-bar-section {
@@ -105,6 +381,14 @@
   height: 64px;
   margin: -38px auto 12px;
   border: 2px solid #fff;
+  background-position: center;
+  border-radius: 50%;
+}
+
+.profile-pic-dropdown-image img {
+  width: 24px;
+  height: 24px;
+  margin-bottom: -5px;
   background-position: center;
   border-radius: 50%;
 }
@@ -276,6 +560,16 @@
   cursor: pointer;
 }
 
+/* .a-decoration{
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+}
+
+.profile-details-account-section a:hover{
+  text-decoration: underline;
+} */
+
 .groups-content {
   padding: 10px 0;
 }
@@ -308,6 +602,147 @@
 .followed-hastags-content {
   padding: 10px 0;
 }
+
+
+/* Modal Section */
+
+.t-20{
+  font-size: 20px;
+}
+
+.modal_button_close:hover{
+  cursor: pointer;
+}
+
+.whole-modal{
+  position: fixed;
+  width: 100%;
+  top: 100px;
+  left: 0;
+  z-index: 1000;
+}
+
+
+.modal-design {
+  width: 556px;
+  border: 0.1px gray;
+  background-color: white;
+  margin: 0 auto;
+  border-radius: 10px;
+
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid rgb(0 0 0 / 9%);
+}
+
+.modal-profile {
+  padding: 10px;
+}
+
+.p0 {
+  padding: 0 !important;
+}
+
+.mL5 {
+  margin-left: 5px;
+}
+
+.modal-display-flex {
+  display: flex;
+  flex-direction: row;
+}
+
+.globe-icon {
+  outline: 1px solid gray;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 5px;
+  margin-left: 5px;
+}
+
+.prifle-image img {
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+}
+
+.modal-text-area {
+  width: 94%;
+  height: 100px;
+  resize: none;
+  font-size: 15px;
+  padding: 5px;
+  margin: 10px;
+  border: none;
+}
+
+.modal-text-area:focus {
+  outline: none;
+}
+
+.add-hash-tag-section {
+  padding: 12px 24px 4px 16px;
+}
+
+.add-hash-tag-section span {
+  color: #0a66c2;
+}
+
+.post-bottom-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 24px 12px 16px;
+}
+
+.logos-button:hover{
+    cursor: pointer;
+    background-color:#ebebeb;
+    border-radius: 50%;
+}
+
+.left-side-logos {
+  display: flex;
+  align-items: center;
+  padding-right: 8px;
+}
+
+.logos-button {
+  background-color: white;
+  border: none;
+  padding: 5px;
+}
+
+.anyone-section {
+  border-left: 1px solid black;
+  padding-left: 8px;
+  margin-right: auto;
+}
+
+.pD4 {
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+}
+
+.modal-post-button {
+  background-color: #ebebeb;
+  color: #a5a5a5;
+  border-radius: 25px !important;
+  padding: 6px 20px 6px 20px;
+  border: none;
+}
+
+
+
+
+/* Modal end */
+
+
 
 /* Sort by section */
 
@@ -661,6 +1096,213 @@
   border-radius: 50%;
 }
 
+
+/* New Commnet Section */
+
+
+.bottom-comment-section{
+  display: flex;
+  flex-direction: column;
+}
+
+.bottom-commnent-box-section{
+  padding: 4px 16px 8px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.commnet_form_box{
+  border: solid transparent;
+  border-width: 3px 0;
+  flex-grow: 1 !important;
+}
+
+.comment_commnent_box_form{
+  padding: 0;
+  border: 1px solid lightgray;
+  display: flex;
+  border-radius: 30px;
+  padding: 10px;
+  color: gray;
+  padding-left: 15px;
+  flex-grow: 1;
+  margin-left: 5px;
+}
+
+.comment_commnent_box_form > form {
+  display: flex;
+  width: 100%;
+}
+
+.comment_commnent_box_form > form > input {
+  border: none;
+  flex: 1;
+  margin-left: 10px;
+  outline-width: 0;
+  font-weight: 600;
+}
+
+.commnets_button{
+  background-color: white;
+  border: none;
+  margin-right: 20px;
+}
+
+.relavent-text{
+  margin: 0 8px 12px 8px;
+}
+
+.load_more_comments_section{
+  margin: 0 0 8px 16px;
+}
+
+.load_more_comments_section:hover{
+  cursor: pointer;
+}
+
+
+.individual_comments{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+}
+
+.user_commnets_section{
+  display: flex;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.comments_lists_section{
+  margin-bottom: 10px;
+}
+
+.user-comments{
+  margin-left: 12px;
+  margin-top: 10px;
+}
+
+.comment_display_flex{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.time_line_button{
+  background-color: unset;
+  border: none;
+}
+
+.time_line_button:hover{
+  cursor: pointer;
+}
+
+.social_button_action{
+  padding: 0 0 0 8px;
+  margin-left: 78px;
+}
+
+.comments_react_icons{
+display: flex;
+}
+
+.devider_section{
+  height: 16px;
+  border-left: 1px solid rgb(0 0 0 / 30%);
+}
+
+.like_section{
+  display: flex;
+}
+
+.like_section:hover{
+  cursor: pointer;
+}
+
+.reaction_button{
+  background-color: unset;
+  border: none;
+  margin-right: 10px;
+}
+
+
+.reply_section{
+  margin-left: 10px;
+}
+
+.reply_section:hover{
+  cursor: pointer;
+}
+
+
+/* New Section Ends */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Comments section */
 
 .feed-comment-sections {
@@ -990,17 +1632,44 @@
     flex-grow: 0;
   }
 
-  .body-section{
-    margin: 0px 30px;
+  .body-section {
     justify-content: flex-end;
+    margin: 0px 30px;
   }
 
   .aside-section {
-    margin-left: 0px;
     width: 66%;
+    margin-left: 0px;
     flex-grow: 0;
   }
 }
+
+
+@media (min-width: 420px) and (max-width: 767px) {
+  .side-bar-section {
+      width: 100%;
+      margin: 15px 0px !important;
+      margin: 0;
+  }
+
+  .news-feed-section {
+      width: 100%;
+      margin: 0;
+
+
+  }
+
+  .aside-section  {
+      margin: 0;
+      width: 100%;
+
+  }
+
+  
+}
+
+
+
 
 @media (min-width: 350px) and (max-width: 767px) {
   .side-bar-section {
@@ -1013,7 +1682,7 @@
     margin: 0;
   }
 
-  .body-section{
+  .body-section {
     margin: 0px 30px;
     justify-content: flex-end;
   }
@@ -1022,4 +1691,57 @@
     margin: 0;
     width: 100%;
   }
+
+  .t-12{
+    font-size: 34px;
+  }
+
+  .t-14{
+    font-size: 45px;
+  }
+
+  .t-16{
+    font-size: 60px;
+  }
+
+  .profile-pic-section-image img{
+    height: 220px;
+    width: 220px;
+    margin-top: -100px;
+  }
+  .identity-bg-image{
+    height: 220px;
+  }
+
+  .container{
+    padding: 10px 20px 20px 20px;
+  }
+
+  .hashtag{
+    height: 58px;
+    width: 40px;
+  }
+
+  .obj-mini-screen{
+    height: 50px;
+    width: 50px;
+  }
+
+  .entry-item-viewed-right span{
+    font-size: 30px;
+  }
+
+  .feed-user-image img{
+    height: 112px;
+    width: 112px;
+  }
+
+  .feed-post-info p{
+    font-size: 34px;
+  }
+
+  .feed-post-info span{
+    font-size: 30px;
+  }
+
 }
